Fix WebKitTestRunner's testPath with Windows full paths https://bugs.webkit.org/show_bug.cgi?id=194012

Reviewed by Alex Christensen.

updateTestOptionsFromTestHeader failed to open test files because
testPath returned wrong file paths. It returned a path "/C:/..."
if a URL "file:///C:/..." was given.

* WebKitTestRunner/TestController.cpp:
(WTR::testPath): Removed the first '/' if the path starts with something like "/C:/".

Canonical link: https://commits.webkit.org/208556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240775 268f45cc-cd09-0410-ab3c-d52691b4dbfc